[package]
name = "spec_css"
version = "0.1.0"
edition = "2021"

[dependencies]
css_lex = { path = "../css_lex" }
speculate_lib = { path = "../speculate_lib" }
[dev-dependencies]
css_lex = { path = "../css_lex" }
speculate_lib = { path = "../speculate_lib" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
